--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -240,7 +240,7 @@ h6 {
 }
 
 .header .logo img {
-  max-height: 36px;
+  max-height: 56px;
   margin-right: 8px;
 }
 
@@ -1323,6 +1323,47 @@ section,
 }
 
 /*--------------------------------------------------------------
+# Library Section
+--------------------------------------------------------------*/
+.library .library-item {
+  background-color: var(--surface-color);
+  padding: 30px;
+  border: 1px solid color-mix(in srgb, var(--default-color), transparent 85%);
+  transition: 0.3s;
+}
+
+.library .library-item .icon {
+  font-size: 36px;
+  line-height: 0;
+  margin-right: 30px;
+  color: var(--accent-color);
+}
+
+.library .library-item .title {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+
+.slibrary .library-item .title a {
+  color: var(--heading-color);
+}
+
+.library .library-item .description {
+  line-height: 24px;
+  font-size: 14px;
+  margin: 0;
+}
+
+.library .library-item:hover {
+  border-color: var(--accent-color);
+}
+
+.library .library-item:hover .title a {
+  color: var(--accent-color);
+}
+
+/*--------------------------------------------------------------
 # Testimonials Section
 --------------------------------------------------------------*/
 .testimonials {
@@ -1572,12 +1613,13 @@ section,
   color: color-mix(in srgb, var(--default-color), transparent 20%);
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   position: absolute;
-  bottom: -50px;
+  top: -50px;
   left: 20px;
   right: 20px;
   padding: 20px 15px;
   overflow: hidden;
   transition: 0.5s;
+  z-index: 1;
 }
 
 .team .member h4 {
